重构数据均分塔虚拟频道与能量均分